# software_fatture

./: LICENSE  README.md  logging_config.py  main.py  pyproject.toml  requirements.txt
.github/worflows/: python-ci.yml
assets/: Schema_VFPA12_v1.2.3.xsd  xslt_service.py
database/: db_session.py  models.py
services/: conta_fatture_pec.py  dropbox_auth.py  dropbox_service.py  notifications.py  parser_fatture.py  pec_service.py
software_fatture/: README.md  pyproject.toml
src/: config.py  crew.py
src/software_fatture/: crew.py  main.py
tests/: test_db_session.py  test_dropbox_service.py  test_imap.py  test_notifications.py  test_parser_fatture.py  test_pec_service.py
ui/: main_window.py
