[project]
name = "software-fatture"
version = "0.1.0"
description = "Software per la gestione delle fatture"
authors = [
    {name = "Francesco Formicola aka Hatholdir"}
]
license = {text = "Free"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dropbox (>=12.0.2,<13.0.0)",
    "imapclient (>=3.0.1,<4.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
