[project]
name = "software_fatture"
version = "0.1.0"
description = "software_fatture using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
software_fatture = "software_fatture.main:run"
run_crew = "software_fatture.main:run"
train = "software_fatture.main:train"
replay = "software_fatture.main:replay"
test = "software_fatture.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
